# SpotFlow

./: .env.example  .gitignore  LICENSE  package.json  pnpm-lock.yaml
apps/api/: pyproject.toml  test_supabase.py
apps/api/src/spotflow_api/: main.py
apps/api/src/spotflow_api/core/: database.py
apps/api/src/spotflow_api/routes/: __init__.py  spots.py
apps/api/src/spotflow_api/services/: spots.py
apps/web/: middleware.ts  next.config.js  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/auth/account/: account-form.tsx  page.tsx
apps/web/app/components/: Header.tsx  SearchInputs.tsx  UserMenu.tsx
apps/web/app/instructors/: page.tsx
apps/web/app/rentals/: page.tsx
apps/web/app/spots/: not-found.tsx  page.tsx
apps/web/app/user/: account-form.tsx  page.tsx
apps/web/components/spots/: HeaderActions.tsx  HeaderLocation.tsx  SpotDetails.tsx  SpotHeader.tsx  SpotsGrid.tsx
apps/web/hooks/: useAuth.ts
apps/web/lib/: api.ts  image_url.ts
apps/web/lib/auth/: client.ts
apps/web/lib/data/: spots.ts
apps/web/types/: types.ts
apps/web/ui/: FavoriteButton.tsx
apps/web/ui/auth/: AuthDialog.tsx  UserMenu.tsx
apps/web/ui/common/: Header.tsx  MobileBottomNav.tsx  SearchInputs.tsx  SearchSelect.tsx
apps/web/ui/spots/: HeaderActions.tsx  HeaderLocation.tsx  SpotCard.tsx  SpotDetails.tsx  SpotDifficultyTag.tsx  SpotHeader.tsx  SpotImages.tsx  SpotLocationAndRating.tsx  SpotSportTagList.tsx  SpotsGrid.tsx
apps/web/utils/supabase/: middleware-protected-routes.md  middleware.ts  server.ts
(+10 files in other folders)
